--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,6 @@ body {
 	/* ensure that no scrollbars appear */
 	margin: 0;
 	padding: 0;
-	overflow-x: hidden;
 }
 
 body {
